2001-05-22  John Harper  <jsh@pixelslut.com>

	Fallout from fixing bug 8220 (Having Ctrl as default "modifier
	key used for default WM shortcuts" breaks everything...):

	* libnautilus-private/nautilus-icon-container.c
	(keyboard_space, keyboard_move_to): changed to use Control
	modifier instead of Alt

2001-05-22  Darin Adler  <darin@eazel.com>

	Fixed problem compiling with new gettext:

	* hack-macros/gnome.m4: Add BUILD_INCLUDED_LIBINTL for
	compatibility with the new gettext.
	
	Fixed a problem with the throbber detecting that its X window is
	gone. Based on suggestions from Owen Taylor.
	
	* libnautilus/nautilus-bonobo-workarounds.h:
	* libnautilus/nautilus-bonobo-workarounds.c:
	(destroy_later_callback), (destroyed_before_timeout_callback),
	(nautilus_bonobo_object_force_destroy_later): Changed to "destroy
	later" instead of "destroy at idle". This makes us less likely to
	experience race conditions.

	* src/nautilus-window.c: (nautilus_window_initialize_class),
	(nautilus_window_unrealize), (nautilus_window_destroy): Moved the
	throbber destruction to unrealize so we destroy the throbber
	before we destroy its X window.

	Starting with patch by Anders Carlsson <andersca@gnu.org>, added
	both prelighting and tracking to the throbber, also making it take
	action on release, not press.

	* components/throbber/nautilus-throbber.c:
	(nautilus_throbber_initialize_class): Add handlers for enter,
	leave, and release.
	(nautilus_throbber_initialize): Set flags so we get enter and
	leave events.
	(select_throbber_image): Ref the image that's returned.
	(draw_throbber_image): Make the image be prelit if the mouse is
	over the throbber but it wasn't clicked, and darkened if the mouse
	is over the throbber and it was clicked.
	(nautilus_throbber_enter_notify_event): Set flag and request
	redraw to prelight.
	(nautilus_throbber_leave_notify_event): Set flag and request
	redraw to un-prelight.
	(nautilus_throbber_button_press_event): Set flag to indicate we